--- a/server/plugins/Terraria/Data/items.yml
+++ b/server/plugins/Terraria/Data/items.yml
@@ -2544,8 +2544,10 @@ Drew之翼:
   lore:
   - §r[饰品]
   - §r▣算作脱身道具
-  - §r受到伤害时会投掷出爆炸成墨水云雾的墨汁炸弹并回复大量潜行值
+  - §r受到伤害时回复大量潜行值
   - §r此效果有20秒冷却时间
+  attributes:
+    invulnerabilityTick: 2
   worth: 400000
   rarity: 2
 寂静刀鞘:
@@ -2656,7 +2658,6 @@ Drew之翼:
   - §r▣算作脱身道具
   - §r受到高于最大生命值5%伤害的攻击时触发闪避
   - §r根据被闪避的攻击伤害，闪避有15到90秒的冷却时间
-  - §r闪避攻击时会释放伤害性流明晶流体云
   - §r闪避攻击时会使你获得大量的潜行值
   - §r“光无法到达海洋深处”
   attributes:
@@ -2712,7 +2713,6 @@ Drew之翼:
   - §r▣算作潜伏增幅饰品
   - §r受到高于最大生命值5%伤害的攻击时触发闪避
   - §r根据被闪避的攻击伤害，闪避有15到90秒的冷却时间
-  - §r闪避攻击时会释放伤害性流明晶流体云
   - §r闪避攻击时会使你获得大量的潜行值
   - §r“光无法到达海洋深处”
   attributes:
