--- a/server/plugins/Terraria/Data/setting.yml
+++ b/server/plugins/Terraria/Data/setting.yml
@@ -30,291 +30,7 @@ rarity:
   '19': §#971617§l
   '1000': §l
   '1100': §#C94622§l
-titleMessages:
-- 我的世界：忘却的旋律
-- 我的世界：试试《泰拉瑞亚》！
-- 我的世界：不要打架，不要打架！
-- 我的世界：世界有2+1个维度，不适合⑨岁玩家游玩
-- 泰拉瑞亚：试试《我的世界》！
-- 泰拉瑞亚：也试试饥荒吧！
-- 泰拉瑞亚：试试《旷野之息》！
-- 泰拉瑞亚：试试《星露谷》！
-- 泰拉瑞亚：试试《地心护核者》！
-- 泰拉瑞亚：试试《太空边缘》！
-- 泰拉瑞亚：建议观看《边缘行者》！
-- 泰拉瑞亚：来试试《死亡细胞》！
-- 泰拉瑞亚：试试《地牢守护者2》！
-- 泰拉瑞亚：逝逝《守望先锋》？
-- 泰拉瑞亚：被沙子制服了
-- 泰拉瑞亚：黑曜石被制服了
-- 泰拉瑞亚第3部分：向导归来
-- 泰拉瑞亚：泰拉瑞亚：泰拉瑞亚：
-- 泰拉瑞亚：按alt-f4
-- 泰拉瑞亚：美味又易燃
-- 泰拉瑞亚：内含小块块，不适合5岁以下的儿童
-- 泰拉瑞亚：现已加入音效
-- 泰拉瑞亚：兄弟你疯了吧？
-- 泰拉瑞亚：重挖好吗？
-- 泰拉瑞亚：强迫症现象模仿者
-- 泰拉瑞亚：劳工挖啊挖！
-- 泰拉瑞亚：神土
-- 泰拉瑞亚：向导死亡的谣言被严重夸大了
-- 泰拉瑞亚：为什么丢向导玩偶会死别的npc
-- 泰拉瑞亚：强迫症现象模仿者
-- 泰拉瑞亚：Cenx邪教
-- 泰拉瑞亚：Maxx传奇
-- 泰拉瑞亚：查询Red精神状态
-- 泰拉瑞亚：克苏鲁疯了……还失去了一只眼睛！
-- 泰拉瑞亚：奥克瑞姆重回江湖！！
-- 泰拉瑞亚：远超生命
-- 泰拉瑞亚：除数为零
-- 泰拉瑞亚：我同情这些工具……
-- 泰拉瑞亚：Red开发救赎
-- 泰拉瑞亚：有矿自有天相
-- 泰拉瑞亚：大地边境
-- 泰拉瑞亚：兔兔传说
-- 泰拉瑞亚：亡了亡了，我没有急支糖浆啊
-- 泰拉瑞亚：很有精神！
-- 泰拉瑞亚：哇真的是你呀
-- 泰拉瑞亚：我不知道--啊啊啊~哎呦~！
-- 泰拉瑞亚：哎呦你干嘛~~
-- 泰拉瑞亚：生存时长两年半！
-- 泰拉瑞亚：现在有更多小黑子！
-- 泰拉瑞亚：原来你也玩……
-- 泰拉瑞亚：我明白了，原来你们各个都身怀撅寄啊！！
-- 泰拉瑞亚：ln（0）= 0 / 0
-- 泰拉瑞亚：旅途的终点，不，是旅途的中点！！！
-- 泰拉瑞亚：这绝对是最后一次更新
-- 泰拉瑞亚：欢迎来到泰拉瑞亚！
-- 泰拉瑞亚：别对一个东西期望太高，这样你就会有惊喜
-- 泰拉瑞亚：1帧能玩，2帧流畅，3帧电竞
-- 泰拉瑞亚：暴风雪绝迹
-- 泰拉瑞亚：你知道我要说什么
-- 泰拉瑞亚：新手围观老手似
-- 泰拉瑞亚：哦，达令，看！你浑身都是坚硬的盔↑甲口牙！
-- 泰拉瑞亚：BOSS强而有力，强而有力口牙！
-- 泰拉瑞亚：你不要点它口牙！（指BOSS召唤物）
-- 泰拉¤瑞亚：ᕕ(@ x @)ᕗ 耐药性 10秒
-- 泰拉瑞亚：40秒，只需要继续拖40秒，40秒之后我一定会马上喝药
-- 泰拉瑞亚：1997年，我学会了开矿车
-- 泰拉瑞亚：那我问你，那我问你
-- 泰拉瑞亚灾厄：敢召唤我就三小弟安排你，听到没有
-- 泰拉瑞亚灾厄：为什么一个怕被虫子吞了的飞蛾比虫子强？
-- 泰拉瑞亚灾厄：花朵艳丽，终将飘散
-- 泰拉瑞亚灾厄：欢迎来到灾厄！
-- 泰拉瑞亚灾厄：查询山猪喝醉没
-- 泰拉瑞亚灾厄：谁还能玩就削谁
-- 泰拉瑞亚灾厄：看我回血
-deathMessages:
-  Generic:
-  - <victim> 的肠子被扯出来了
-  - <victim> 的旅程结束了
-  - <victim> 被送去见奥库瑞姆了
-  - <victim> 被浸渍了
-  - <victim> 被放干了血
-  - <victim> 被送到了骷髅区
-  - <victim> 被自发切除了脑叶
-  - <victim> 被压成了肉酱
-  - <victim> 被碾成了肉泥
-  - <victim> 的骨头被敲得粉碎
-  - <victim> 成了怪物的食物
-  - <victim> 的家被重塑了
-  - <victim> 被迫自愿献血了
-  - <victim> 的天灵盖被掀了
-  - <victim> 的头顶被削掉了
-  - <victim> 的零件放错了位置
-  - <victim> 被打成了爽口酱汁
-  - <victim> 的脊椎被扯掉了
-  - <victim> 的存活纪录被终结了
-  - <victim> 接受了强制截肢
-  - <victim> 的脖子被折断了
-  - <victim> 被撕成了碎片
-  - <victim> 重伤不治
-  - <victim> 被告知阳寿已尽
-  - <victim> 的无能被展示了
-  - <victim> 的灵魂被抽离了
-  - <victim> 经历了仁慈的安乐死
-  - <victim> 被自下而上地吃掉了
-  - <victim> 被去骨了
-  - <victim> 的两个肾都被偷了
-  - <victim> 的堕落结束了
-  - <victim> 的椎间盘脱出了
-  - <victim> 的遗体被捐赠给了科学
-  - <victim> 的大脑变成了果酱
-  - <victim> 变成了下酒菜
-  - <victim> 被送到了农场
-  - <victim> 咽下了最后一口气
-  - <victim> 的心跳停止了
-  - <victim> 的头部挨了一记猛的
-  - <victim> 被抹杀了
-  - <victim> 受了脱套伤
-  - <victim> 被剥了皮
-  - <victim> 被围杀了
-  - <victim> 被打屁股了
-  - <victim> 被抓到了
-  - <victim> 被杀掉了
-  - <victim> 被放进水晶棺里了
-  - <victim> 已经被埋了
-  - <victim> 很快就会被遗忘
-  - <victim> 被劈了
-  - <victim> 被杀害了
-  - <victim> 被从这个世界里剔除了
-  - <victim> 被谋杀了
-  - <victim> 被毁容了
-  - <victim> 的内脏被拽出来了
-  - <victim> 被锤爆了
-  - <victim> 的脑阔碎了
-  - <victim> 惨遭屠杀
-  - <victim> 被捅了个透心凉
-  - <victim> 被撕成了两半
-  - <victim> 被斩首
-  - <victim> 的胳膊被扯掉了
-  - <victim> 的内脏变成了外脏
-  - <victim> 惨遭肢解
-  - <victim> 被撕裂了
-  - <victim> 的重要器官毁了
-  - <victim> 变成了一坨肉
-  - <victim> 惨遭腰斩
-  - <victim> 被对半劈开
-  - <victim> 被切成了臊子
-  - <victim> 求死的愿望实现了
-  - <victim> 被做成了脱骨肉
-  - <victim> 停止了呼吸
-  - <victim> 身首异处
-  - <victim> 的头飞了
-  - 英灵殿在等着 <victim>
-  - <victim> 光荣地死去
-  - <victim> 肌肉不够多
-  - <victim> 能够逃脱
-  - <victim> 犯了人类的经典错误
-  - <victim> 在英灵殿中安息
-  - <victim> 在死后的世界冲浪
-  - <victim> 的运气用光了
-  - <victim> 满身疮痍
-  - <victim> 的死毫无意义
-  - <victim> 面带安详
-  - <victim> 的骨灰像雨点一样飘落
-  - <victim> 多了一个肚脐眼
-  - <victim> 被登dua郎
-  - <victim> 心花怒放
-  - <victim> 脑洞大开
-  Lava:
-  - <victim> 被熔化了
-  - <victim> 被烧成了灰
-  - <victim> 试图在熔岩中游泳
-  - <victim> 喜欢在岩浆中玩耍
-  - <victim> 不擅长玩“地板是熔岩”
-  Fall:
-  - <victim> 摔死了
-  - <victim> 没有反弹
-  - <victim> 发明了重力
-  - <victim> 领悟了“抛出窗外”的意思
-  - <victim> 自由......自由落体了
-  - <victim> 尝试了滑冰上坡
-  - <victim> 认为自己会飞
-  - <victim> 留下了一个大坑
-  - <victim> 忘记了自己绝妙的想法
-  - <victim> 亲吻了大地
-  Drowning:
-  - <victim> 忘记了呼吸
-  - <victim> 与鱼同眠
-  - <victim> 溺死了
-  - <victim> 成了鲨鱼的食物
-  - <victim> 试图饮尽湖水
-  - <victim> 发现了亚特兰蒂斯
-  - <victim> 忘了带毛巾
-  Suffocation:
-  - <victim> 无法呼吸
-  - <victim> 被活埋了
-  Debuff_恐惧:
-  - <victim> 试图逃跑
-  Debuff_燃烧:
-  - <victim> 无法把火扑灭
-  - <victim> 被烧成了焦炭
-  - <victim> 被烧得只剩渣了
-  - <victim> 成了全熟牛排
-  Debuff_霜火:
-  - <victim> 无法把火扑灭
-  - <victim> 被烧成了焦炭
-  - <victim> 被烧得只剩渣了
-  - <victim> 成了全熟牛排
-  Debuff_狱炎:
-  - <victim> 被狱火吞噬了
-  Debuff_咒火:
-  - <victim> 无法把火扑灭
-  - <victim> 被烧成了焦炭
-  - <victim> 被烧得只剩渣了
-  - <victim> 成了全熟牛排
-  Debuff_暗影焰:
-  - <victim> 的灵魂化作了灰烬
-  Debuff_中毒:
-  - <victim> 无法找到解药
-  Debuff_剧毒:
-  - <victim> 无法找到解药
-  Debuff_带电:
-  - <victim> 无法控制瓦数
-  - <victim> 变成了电池
-  - <victim> 的生命力从正变负
-  - <victim> 成了避雷针
-  Debuff_深渊水压:
-  - <victim> 被压力碾碎了
-  - <victim> 的肺坍缩成了一团
-  Debuff_血液沸腾:
-  - <victim> 血如泉涌
-  Debuff_硫磺火:
-  - <victim> 被漆黑的烈焰燃尽
-  Debuff_辐射:
-  - <victim> 死于辐射
-  Debuff_幻星感染:
-  - <victim> 成为了星辉瘟疫的一部分
-  - <victim> 的皮肤被星体病毒侵蚀了
-  Debuff_瘟疫:
-  - <victim> 的血肉被瘟疫所融化
-  - <victim> 已无药可医
-  Debuff_破晓:
-  - <victim> 被日耀射线焚烧殆尽
-  Debuff_神圣之火:
-  - <victim> 被自己的罪孽吞噬了
-  Debuff_夜魇:
-  - <victim> 被月之射线焚烧殆尽
-  Debuff_元素谐鸣:
-  - <victim> 融入了元素交响乐
-  Debuff_圣狱神火:
-  - <victim> 被亵渎之神变成了灰烬
-  Debuff_硫磺海剧毒:
-  - <victim> 被剧毒废物融化了
-  Debuff_弑神怒焰:
-  - <victim> 的灵魂消散了
-  Debuff_龙焰:
-  - <victim> 离解成灰
-  Debuff_超位崩解:
-  - <victim> 被奇迹般的科技进步扫进了历史的垃圾堆
-  - <victim> 与星流能量共振而塌缩了
-  Debuff_孱弱巫咒:
-  - <victim> 被硫磺烈焰烧焦了
-  Debuff_解离:
-  - <victim> 的灵魂已支离破碎
-  Debuff_血神之凋零:
-  - <victim> 成为了血神的祭品
-  Debuff_灵魂之戒:
-  - <victim> 将自己所剩无几的灵魂转化成了魔力
-  NegRegen_硫火狂怒:
-  - <victim> 试图在怒火中与敌人同归于尽
-  NegRegen_魔力烧蚀:
-  - <victim> 被魔力焚毁
-  NegRegen_魔力熔蚀:
-  - <victim> 被熔融的魔力化为灰烬
-  - <victim> 的灵魂已支离破碎
-  NegRegen_魔能谐振仪:
-  - <victim> 的生命完全升华为了魔力
-  - <victim> 与魔力合为一体
-  NegRegen_龙心吊坠:
-  - <victim> 过于迷恋巨龙之力
-  NegRegen_魔能过载仪:
-  - <victim> 的身形被过载的魔法摧毁了
-  NegRegen_幻灭心元石:
-  - <victim> 于仇恨中幻灭
-settings:
+plyInventories:
   playerInventories:
   - piggyBank
   - voidBag
