tweaks, bugfix & rogue armorsets

--- a/server/plugins/Terraria/Data/armorSet.yml
+++ b/server/plugins/Terraria/Data/armorSet.yml
@@ -1031,12 +1031,11 @@ sets:
     lore:
     - ''
     - §a套装效果：
-    - §a盗贼的攻击有概率触发爆炸
-    - §a潜伏攻击必定触发
-    - §a该效果有1.5秒冷却时间
+    - §a+10% 盗贼伤害
     - §a+110 潜行值上限
     attributes:
       stealthLimit: 110
+      damageRogueMulti: 0.1
   掠夺者坦克套装:
     lore:
     - ''
@@ -1132,20 +1131,20 @@ sets:
     lore:
     - ''
     - §a套装效果：
-    - §a+5% 远程伤害
+    - §a+10% 远程伤害
     - §a使用远程武器时发射出一个熔岩火球
     attributes:
-      damageRangedMulti: 0.05
+      damageRangedMulti: 0.1
   渊泉盗贼套装:
     lore:
     - ''
     - §a套装效果：
     - §a+5% 盗贼伤害
+    - §a+5% 盗贼暴击率
     - §a+110 潜行值上限
-    - §a使用盗贼武器攻击时召唤8团追踪火焰
-    - §a该效果有2秒冷却时间
     attributes:
       damageRogueMulti: 0.05
+      critRogue: 5
       stealthLimit: 110
   渊泉魔法套装:
     lore:
@@ -1222,8 +1221,7 @@ sets:
     - §a套装效果：
     - §a+9% 盗贼伤害
     - §a+115 潜行值上限
-    - §a盗贼弹幕击中敌人生成额外弹幕
-    - §a受伤和残血时受到来自宇宙的怒火加持
+    - §a血量低于50%时获得10%伤害和5%暴击率
     attributes:
       damageRogueMulti: 0.09
       stealthLimit: 115
@@ -1265,8 +1263,6 @@ sets:
     - §a套装效果：
     - §a减少刷怪量和刷怪率
     - §a+115 潜行值上限
-    - §a使用盗贼武器暴击敌人时你会获得5秒伤害提升
-    - §a这个效果有25秒的冷却
     attributes:
       mobLimit: -2
       mobSpawnRateMulti: -0.5
@@ -1482,8 +1478,6 @@ sets:
     - §a继承龙蒿套装、血炎套装和弑神者套装盗贼头盔的效果
     - §b-> §a继承自龙蒿套装的效果：
     - §a减少刷怪量和刷怪率
-    - §a使用盗贼武器暴击敌人时你会获得5秒伤害提升
-    - §a这个效果有25秒的冷却
     - §b-> §a继承自血炎套装的效果：
     - §a+6 生命恢复
     - §a击中敌人会掉落红心，这个效果有5秒冷却时间
