bandit NPC, tick compensation rework

--- a/server/plugins/Terraria/Data/NPC.yml
+++ b/server/plugins/Terraria/Data/NPC.yml
@@ -186,6 +186,24 @@ messages:
     - <name>，再次感谢你帮我解除诅咒！感觉像是被什么东西跳起来咬了一口。
     - <name>，来看看我刚做好的服装吗？或者……你是来陪我这个老人聊天的？
     - 看好了，这样可以完整的抽出蛛丝中坚韧的线，制成的丝绸坚韧又光滑！
+  强盗:
+    tier: 骷髅王
+    deny:
+    - 就凭你这小胳膊也想投掷武器？去健健身吧。
+    - 嘿，走路瞧着点，我的飞镖可不长眼睛！
+    - 你站在那肯定是想被钨钢无人机射成马蜂窝，是吧？
+    - 僵尸们不怎么擅长躲避，但愿你比它们强一点。
+    - 嘿，别靠近那边！我刚刚做了点手脚，踏错一步你下一秒可能就躺地板上了。
+    trade:
+    - 只要够大力，任何物品都能当作武器。
+    - 看好了，全靠手腕的巧劲，四两拨千斤！哦，就当无事发生过。
+    - 你知道我是做什么的；劫富济贫。当然，中饱私囊。
+    - 啊，蛇，为什么总是蛇？
+    - 这才不是偷！我只不过是借，死的时候再还DA☆ZE！
+    - 你知道，拥有你想要的一切事物是超级好的，有些人从来没有过这种奢华的体验。
+    - 哥布林工匠的口袋里不仅有刺球还有一大笔钱，但他心不在焉都没注意到被我偷了，笑死我了。
+    - 想听点秘密？既然哥布林工匠每次都拿走你那么多钱，我其实早就盯上他了。这件事我要你保密。
+    - 嘿，既然政府的人能收税，为什么我就不能？什么？你说我们完全没有可比性？
 shops:
   哥布林工匠:
     default:
