--- a/server/plugins/Terraria/Data/entities.yml
+++ b/server/plugins/Terraria/Data/entities.yml
@@ -1387,41 +1387,51 @@ XF-09“阿瑞斯”特斯拉加农炮:
         - "魔法箭袋:1:1:0.05"
 眼怪:
     drop:
+        - "日影面纱:2:4:0.5"
         - "铜币:10000:15000:1"
 科学怪人:
     drop:
+        - "日影面纱:1:1:0.05"
         - "铜币:1000:2000:1"
 沼泽怪:
     drop:
+        - "日影面纱:1:1:0.05"
         - "铜币:2000:3000:1"
     buffImmute:
         - "中毒"
 吸血鬼:
     drop:
+        - "日影面纱:2:4:0.5"
         - "铜币:10000:15000:1"
         - "月亮石:1:1:0.0563"
     buffInflict:
         - "流血|200|1"
 水月怪:
     drop:
+        - "日影面纱:1:1:0.05"
         - "铜币:2000:3000:1"
 弗里茨:
     drop:
+        - "日影面纱:1:1:0.05"
         - "铜币:1000:2000:1"
 攀爬魔:
     drop:
+        - "日影面纱:1:1:0.05"
         - "铜币:3000:3500:1"
 死神:
     drop:
+        - "日影面纱:1:1:0.05"
         - "铜币:3500:4000:1"
         - "死神镰刀:1:1:0.0494"
 蛾怪:
     drop:
+        - "日影面纱:2:4:0.5"
         - "铜币:120000:130000:1"
         - "断裂英雄剑:1:1"
         - "克苏鲁之眼悠悠球:1:1:0.5555"
 致命球:
     drop:
+        - "日影面纱:1:1:0.05"
         - "铜币:2000:2500:1"
         - "致命球法杖:1:1:0.0494"
 稻草人:
