--- a/server/plugins/Terraria/Data/weapons.yml
+++ b/server/plugins/Terraria/Data/weapons.yml
@@ -143,6 +143,11 @@
   size: 4.5
   particleColor:
   - 0|0|175
+  projectileInfo:
+    interval: 2
+    velocity: 2
+    noGravity: true
+    name: 永夜光束
 剑鱼:
   type: STAB
   size: 4
@@ -188,7 +193,6 @@
   autoSwing: true
   size: 4.5
   projectileInfo:
-    interval: 2
     velocity: 2
     noGravity: true
     name: 永夜光束
@@ -197,7 +201,6 @@
   autoSwing: true
   size: 6
   projectileInfo:
-    interval: 2
     velocity: 2
     noGravity: true
     name: 光明光束
