--- a/server/plugins/Terraria/Data/recipes.yml
+++ b/server/plugins/Terraria/Data/recipes.yml
@@ -4529,10 +4529,9 @@ ENCHANTMENT_TABLE:
     requireLevel: 1
     resultItem: 血泪
     requireItem:
-    - 血珠:16
     - 暗影鳞片:4
     - 凝胶:4
-    - 火焰花
+    - 火焰花:4
     recipeCategory: TOOL
 AIR:
   '1':
